--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,22 +23,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# setup theme
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-set-window-option -g clock-mode-colour colour64 #green
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+# use 256 color palette
+set -g default-terminal "screen-256color"
 
-# try to import tmuxline config
+# use tmuxline config
 if-shell "test -f .tmuxline" "source .tmuxline"
