customize tmux status bar and add split resize commands

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# resize splits
+bind H resize-pane -R 10
+bind J resize-pane -D 10
+bind K resize-pane -U 10
+bind L resize-pane -L 10
+
 # use 256 color palette
 set -g default-terminal "screen-256color"
 
 # use tmuxline config
-if-shell "test -f .tmuxline" "source .tmuxline"
+if-shell "test -f .tmuxline" "source ~/.tmuxline"
