--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@
 
 # c-b is inconvenient
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-space
+bind-key C-space send-prefix
 
 # convenient config reload
 bind r source-file ~/.tmux.conf
@@ -13,21 +13,23 @@ bind r source-file ~/.tmux.conf
 # use vim mode
 set-window-option -g mode-keys vi
 
-# vim splits
-bind s split-window -h
-bind v split-window -v
-
-# vim split navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# window splits
+bind v split-window -h
+bind s split-window -v
 
 # resize splits
-bind H resize-pane -R 10
-bind J resize-pane -D 10
-bind K resize-pane -U 10
-bind L resize-pane -L 10
+bind h resize-pane -R 5
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -L 5
+
+# smart pane switching with awareness of vim splits
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # use 256 color palette
 set -g default-terminal "screen-256color"
