--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+
   "extends": "airbnb",
 
   "env": {
@@ -15,29 +16,33 @@
     "react/jsx-filename-extension": 0,
 
     "max-len":                      [ "warn", 128 ],
-    "react/jsx-curly-spacing":      [ "warn", "always" ],
-    "template-curly-spacing":       [ "warn", "always" ],
     "space-before-function-paren":  [ "warn", "never" ],
+    "template-curly-spacing":       [ "warn", "always" ],
     "padded-blocks":                [ "warn", "always" ],
-    "arrow-body-style":             [ "warn", "as-needed" ],
     "arrow-parens":                 [ "warn", "always" ],
-
-    "import/no-extraneous-dependencies": [ "error", {
-      "devDependencies": true
-    }],
-
-    "space-in-parens": [ "warn", "always", {
-      "exceptions": ["{}", "[]", "empty"]
-    } ],
+    "arrow-body-style":             [ "warn", "as-needed" ],
 
     "key-spacing": [ 2, {
       "align": "value"
     }],
 
+    "space-in-parens": [ "warn", "always", {
+      "exceptions": ["{}", "[]", "empty"]
+    }],
+
     "array-bracket-spacing": [ 2, "always", {
       "objectsInArrays": false,
       "arraysInArrays":  false
+    }],
+
+    "react/jsx-curly-spacing": [ 2, "always", {"spacing": {
+      "objectLiterals": "never"
+    }}],
+
+    "import/no-extraneous-dependencies": [ "error", {
+      "devDependencies": true
     }]
 
   }
+
 }
