set /usr/local/bin/zsh as default shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
+# use zsh as default shell
+set-option -g default-shell /usr/local/bin/zsh
+
 # convenient config reload
 bind r source-file ~/.tmux.conf
 
