add webpack path resolution to eslint and tern

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,9 +16,10 @@ bind r source-file ~/.tmux.conf
 # use vim mode
 set-window-option -g mode-keys vi
 
-# window splits
-bind v split-window -h
-bind s split-window -v
+# open panes and windows using current directory
+bind v split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 
 # resize splits
 bind h resize-pane -R 5
