--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,10 @@
     "node": true
   },
 
+  "settings": {
+    "import/resolver": "webpack"
+  },
+
   "rules": {
 
     "func-names":                   0,
