remove eunuch and dispatch; add vimux; clean up config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,11 +21,15 @@ bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
+# close without prompt
+bind-key x kill-pane
+bind-key & kill-window
+
 # resize splits
-bind h resize-pane -R 5
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -L 5
+bind h resize-pane -R 12
+bind j resize-pane -D 12
+bind k resize-pane -U 12
+bind l resize-pane -L 12
 
 # smart pane switching with awareness of vim splits
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
