--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,46 +1,50 @@
 #
 # Tmux Config
 #
+# :: General
+# :: Splits
+# :: Vim
 
-# c-b is inconvenient
+#
+# General
+#
+
 unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
-# use zsh as default shell
-set-option -g default-shell /usr/local/bin/zsh
-
-# convenient config reload
-bind r source-file ~/.tmux.conf
-
-# use vim mode
 set-window-option -g mode-keys vi
 
-# open panes and windows using current directory
+set-option -g default-shell /usr/local/bin/zsh
+set -g default-terminal "screen-256color"
+
+bind r source-file ~/.tmux.conf
+
+#
+# Splits
+#
+
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
-# close without prompt
 bind-key x kill-pane
 bind-key & kill-window
 
-# resize splits
 bind h resize-pane -R 12
 bind j resize-pane -D 8
 bind k resize-pane -U 8
 bind l resize-pane -L 12
 
-# smart pane switching with awareness of vim splits
+#
+# Vim
+#
+
+if-shell "test -f .tmuxline" "source ~/.tmuxline"
+
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-# use 256 color palette
-set -g default-terminal "screen-256color"
-
-# use tmuxline config
-if-shell "test -f .tmuxline" "source ~/.tmuxline"
