--- a/.eslintrc
+++ b/.eslintrc
@@ -1,53 +1,29 @@
 {
-
   "parser": "babel-eslint",
   "extends": "airbnb",
-
   "env": {
     "browser": true,
     "node": true
   },
-
   "settings": {
     "import/resolver": "webpack"
   },
-
   "rules": {
-
-    "func-names":                   0,
-    "no-multi-spaces":              0,
-    "no-mixed-operators":           0,
-    "react/require-default-props":  0,
-    "react/jsx-filename-extension": 0,
-
-    "max-len":                     [ "warn", 128 ],
+    "func-names": 0,
+    "no-multi-spaces": 0,
+    "no-mixed-operators": 0,
+    "max-len": [ "warn", 128 ],
+    "padded-blocks": [ "warn", "always" ],
+    "arrow-parens": [ "warn", "always" ],
+    "arrow-body-style": [ "warn", "as-needed" ],
+    "key-spacing": [ 2, { "align": "value" }],
+    "template-curly-spacing": [ "warn", "always" ],
     "space-before-function-paren": [ "warn", "never" ],
-    "template-curly-spacing":      [ "warn", "always" ],
-    "padded-blocks":               [ "warn", "always" ],
-    "arrow-parens":                [ "warn", "always" ],
-    "arrow-body-style":            [ "warn", "as-needed" ],
-
-    "key-spacing": [ 2, {
-      "align": "value"
-    }],
-
-    "space-in-parens": [ "warn", "always", {
-      "exceptions": ["{}", "[]", "empty"]
-    }],
-
-    "array-bracket-spacing": [ 2, "always", {
-      "objectsInArrays": false,
-      "arraysInArrays":  false
-    }],
-
-    "react/jsx-curly-spacing": [ 2, "always", {"spacing": {
-      "objectLiterals": "never"
-    }}],
-
-    "import/no-extraneous-dependencies": [ "error", {
-      "devDependencies": true
-    }]
-
+    "space-in-parens": [ "warn", "always", { "exceptions": [ "{}", "[]", "empty" ] }],
+    "array-bracket-spacing": [ 2, "always", { "objectsInArrays": false, "arraysInArrays": false }],
+    "import/no-extraneous-dependencies": [ "error", { "devDependencies": true }],
+    "react/jsx-curly-spacing": [ 2, "always", {"spacing": { "objectLiterals": "never" }}],
+    "react/require-default-props": 0,
+    "react/jsx-filename-extension": 0
   }
-
 }
