fix eslint config error

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "import/no-extraneous-dependencies": [ "error", { "devDependencies": true }],
     "react/jsx-curly-spacing": [ 2, "always", {"spacing": { "objectLiterals": "never" }}],
     "react/require-default-props": 0,
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "error/quote-props": 0
   }
 }
