--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,11 +16,11 @@ bind-key C-space send-prefix
 set-window-option -g mode-keys vi
 
 set-option -g default-shell /usr/local/bin/zsh
+set-option -g allow-rename off
+
 set -g default-terminal "screen-256color"
 
 bind r source-file ~/.tmux.conf
-
-if-shell "test -f .tmuxline" "source ~/.tmuxline"
 
 #
 # Splits
@@ -37,6 +37,12 @@ bind h resize-pane -R 12
 bind j resize-pane -D 8
 bind k resize-pane -U 8
 bind l resize-pane -L 12
+
+#
+# Vim
+#
+
+if-shell "test -f .tmuxline" "source ~/.tmuxline"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
