--- a/.tmuxrc
+++ b/.tmuxrc
@@ -2,8 +2,8 @@
 # Tmux Config
 #
 # :: General
-# :: Splits
-# :: Vim
+# :: Status
+# :: Keybinds
 
 #
 # General
@@ -14,17 +14,31 @@ set-option -g prefix C-space
 bind-key C-space send-prefix
 
 set-window-option -g mode-keys vi
-
 set-option -g default-shell /usr/local/bin/zsh
-set-option -g allow-rename off
-
 set -g default-terminal "screen-256color"
 
-bind r source-file ~/.tmux.conf
+#
+# Status
+#
+
+set -g message-style fg=colour246,bg=colour235
+set -g status-justify centre
+set -g status-position top
+set -g status-bg colour235
+set -g status-fg colour246
+set -g status-left ' #[fg=colour259]#S'
+set -g status-right '%a %b %d %R %p '
+set -g window-status-bg colour235
+set -g window-status-format ' #[fg=colour246]#W'
+set -g window-status-current-bg colour235
+set -g window-status-current-format ' #[fg=colour250]#W'
 
 #
-# Splits
+# Keybinds
 #
+
+bind r source-file ~/.tmux.conf
+bind k clear-history
 
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
@@ -37,12 +51,6 @@ bind h resize-pane -R 12
 bind j resize-pane -D 8
 bind k resize-pane -U 8
 bind l resize-pane -L 12
-
-#
-# Vim
-#
-
-if-shell "test -f .tmuxline" "source ~/.tmuxline"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
