--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set-option -g prefix C-space
 bind-key C-space send-prefix
 
 set-window-option -g mode-keys vi
+set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 
 #
@@ -26,6 +27,8 @@ set -g status-position top
 set -g status-bg colour235
 set -g status-fg colour246
 set -g window-status-bg colour235
+set -g status-left ''
+set -g status-right ''
 set -g window-status-format ' #[fg=colour246]#W'
 set -g window-status-current-bg colour235
 set -g window-status-current-format ' #[fg=colour250]#W'
