--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,54 @@
-[submodule "env/plugins/gruvbox"]
-	path = env/plugins/gruvbox
+[submodule "env/bundle/gruvbox"]
+	path = env/bundle/gruvbox
 	url = https://github.com/morhetz/gruvbox
-[submodule "env/plugins/scss-syntax.vim"]
-	path = env/plugins/scss-syntax.vim
+[submodule "env/bundle/scss-syntax.vim"]
+	path = env/bundle/scss-syntax.vim
 	url = https://github.com/cakebaker/scss-syntax.vim
-[submodule "env/plugins/vim-javascript"]
-	path = env/plugins/vim-javascript
+[submodule "env/bundle/vim-javascript"]
+	path = env/bundle/vim-javascript
 	url = https://github.com/pangloss/vim-javascript
-[submodule "env/plugins/vim-jsx"]
-	path = env/plugins/vim-jsx
+[submodule "env/bundle/vim-jsx"]
+	path = env/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx
-[submodule "env/plugins/ale"]
-	path = env/plugins/ale
+[submodule "env/bundle/ale"]
+	path = env/bundle/ale
 	url = https://github.com/w0rp/ale
-[submodule "env/plugins/vim-vinegar"]
-	path = env/plugins/vim-vinegar
+[submodule "env/bundle/vim-vinegar"]
+	path = env/bundle/vim-vinegar
 	url = https://github.com/tpope/vim-vinegar
-[submodule "env/plugins/vim-fugitive"]
-	path = env/plugins/vim-fugitive
+[submodule "env/bundle/vim-fugitive"]
+	path = env/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive
-[submodule "env/plugins/vim-gitgutter"]
-	path = env/plugins/vim-gitgutter
+[submodule "env/bundle/vim-gitgutter"]
+	path = env/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter
-[submodule "env/plugins/vim-tmux-navigator"]
-	path = env/plugins/vim-tmux-navigator
+[submodule "env/bundle/vim-tmux-navigator"]
+	path = env/bundle/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator
-[submodule "env/plugins/fzf.vim"]
-	path = env/plugins/fzf.vim
+[submodule "env/bundle/fzf.vim"]
+	path = env/bundle/fzf.vim
 	url = https://github.com/junegunn/fzf.vim
-[submodule "env/plugins/vim-easy-align"]
-	path = env/plugins/vim-easy-align
+[submodule "env/bundle/vim-easy-align"]
+	path = env/bundle/vim-easy-align
 	url = https://github.com/junegunn/vim-easy-align
-[submodule "env/plugins/auto-pairs"]
-	path = env/plugins/auto-pairs
+[submodule "env/bundle/auto-pairs"]
+	path = env/bundle/auto-pairs
 	url = https://github.com/jiangmiao/auto-pairs
-[submodule "env/plugins/vim-closetag"]
-	path = env/plugins/vim-closetag
+[submodule "env/bundle/vim-closetag"]
+	path = env/bundle/vim-closetag
 	url = https://github.com/alvan/vim-closetag
-[submodule "env/plugins/vim-surround"]
-	path = env/plugins/vim-surround
+[submodule "env/bundle/vim-surround"]
+	path = env/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround
-[submodule "env/plugins/vim-commentary"]
-	path = env/plugins/vim-commentary
+[submodule "env/bundle/vim-commentary"]
+	path = env/bundle/vim-commentary
 	url = https://github.com/tpope/vim-commentary
-[submodule "env/plugins/vim-repeat"]
-	path = env/plugins/vim-repeat
+[submodule "env/bundle/vim-repeat"]
+	path = env/bundle/vim-repeat
 	url = https://github.com/tpope/vim-repeat
-[submodule "env/plugins/fzf"]
-	path = env/plugins/fzf
+[submodule "env/bundle/fzf"]
+	path = env/bundle/fzf
 	url = https://github.com/junegunn/fzf
-[submodule "env/plugins/base16-vim"]
-	path = env/plugins/base16-vim
+[submodule "env/bundle/base16-vim"]
+	path = env/bundle/base16-vim
 	url = http://github.com/chriskempson/base16-vim
