--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -10,8 +10,8 @@
 #
 
 unbind C-b
-set-option -g prefix C-space
-bind-key C-space send-prefix
+set-option -g prefix C-a
+bind C-a send-prefix
 
 set-window-option -g mode-keys vi
 set-option -g default-shell /bin/zsh
@@ -43,17 +43,15 @@ bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
-bind-key x kill-pane
-bind-key & kill-window
+bind x kill-pane
+bind & kill-window
 
-bind h resize-pane -R 12
-bind j resize-pane -D 8
-bind k resize-pane -U 8
-bind l resize-pane -L 12
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind > resize-pane -R 10
+bind - resize-pane -D 10
+bind + resize-pane -U 10
+bind < resize-pane -L 10
