--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -46,6 +46,11 @@ bind c new-window -c '#{pane_current_path}'
 bind x kill-pane
 bind & kill-window
 
+bind-key < resize-pane -L 10
+bind-key - resize-pane -D 10
+bind-key + resize-pane -U 10
+bind-key > resize-pane -R 10
+
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
@@ -60,8 +65,3 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
-
-bind-key -n Left resize-pane -L 10
-bind-key -n Down resize-pane -D 10
-bind-key -n Up resize-pane -U 10
-bind-key -n Right resize-pane -R 10
