clean up config files; refactor for organization

--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -1,26 +1,19 @@
 #
 # Tmux Config
 #
-# :: General
-# :: Status
-# :: Keybinds
+# :: Settings
+# :: Bandings
 
 #
-# General
+# Settings
 #
 
 unbind C-b
 set-option -g prefix C-a
 bind C-a send-prefix
 
-set-window-option -g mode-keys vi
-set-option -g default-shell /bin/zsh
+set -g mode-keys vi
 set -g default-terminal "screen-256color"
-
-#
-# Status
-#
-
 set -g message-style fg=colour07,bg=colour00
 set -g status-justify centre
 set -g status-position top
@@ -33,7 +26,7 @@ set -g window-status-current-bg colour00
 set -g window-status-current-format ' #[fg=colour07]#W'
 
 #
-# Keybinds
+# Bindings
 #
 
 bind r source-file ~/.tmux.conf
@@ -46,22 +39,22 @@ bind c new-window -c '#{pane_current_path}'
 bind x kill-pane
 bind & kill-window
 
-bind-key < resize-pane -L 10
-bind-key - resize-pane -D 10
-bind-key + resize-pane -U 10
-bind-key > resize-pane -R 10
+bind < resize-pane -L 10
+bind - resize-pane -D 10
+bind + resize-pane -U 10
+bind > resize-pane -R 11
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+bind -T copy-mode-vi C-h select-pane -L
+bind -T copy-mode-vi C-j select-pane -D
+bind -T copy-mode-vi C-k select-pane -U
+bind -T copy-mode-vi C-l select-pane -R
+bind -T copy-mode-vi C-\ select-pane -l
