update install file; force tmux to use zsh; update readme docs

--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -11,6 +11,7 @@ set-option -g prefix C-a
 bind C-a send-prefix
 
 set -g mode-keys vi
+set -g default-command zsh
 set -g message-style fg=colour07,bg=colour00
 set -g status-justify centre
 set -g status-position top
