--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -34,6 +34,8 @@ bind V split-window -hb -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 bind S split-window -vb -c '#{page_current_path}'
 bind c new-window -c '#{pane_current_path}'
+bind N swap-window -t +1
+bind P swap-window -t -1
 
 bind x kill-pane
 bind & kill-window
