--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -37,6 +37,7 @@ bind S split-window -vb -c '#{page_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind N swap-window -t +1
 bind P swap-window -t -1
+bind k clear-history
 
 bind x kill-pane
 bind & kill-window
