--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -27,9 +27,10 @@ set -g window-status-current-format ' #[fg=colour07]#W'
 # Bindings
 #
 
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
 bind r source-file ~/.tmux.conf
 bind k clear-history
-
 bind v split-window -h -c '#{pane_current_path}'
 bind V split-window -hb -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
@@ -38,24 +39,17 @@ bind c new-window -c '#{pane_current_path}'
 bind N swap-window -t +1
 bind P swap-window -t -1
 bind k clear-history
-
 bind x kill-pane
 bind & kill-window
-
 bind < resize-pane -L 10
 bind - resize-pane -D 10
 bind + resize-pane -U 10
 bind > resize-pane -R 11
-
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
 bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 bind -T copy-mode-vi C-h select-pane -L
 bind -T copy-mode-vi C-j select-pane -D
 bind -T copy-mode-vi C-k select-pane -U
