add custom tab line function to vimrc

--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -1,36 +1,39 @@
 #
 # Tmux Config
 #
+# :: Settings
+# :: Bindings
 
 #
 # Settings
 #
 
 unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
+set-option -g prefix C-Space
+bind C-Space send-prefix
 
 set -g mode-keys vi
 set -g default-command zsh
-set -g message-style fg=colour07,bg=colour00
+set -g message-style fg=default,bg=default
 set -g status-justify centre
 set -g status-position top
-set -g status-bg colour00
-set -g window-status-bg colour00
+set -g status-bg default
+set -g window-status-bg default
 set -g status-left ''
 set -g status-right ''
-set -g window-status-format ' #[fg=colour08]#W'
-set -g window-status-current-bg colour00
+set -g window-status-format ' #[fg=colour12]#W'
+set -g window-status-current-bg default
 set -g window-status-current-format ' #[fg=colour07]#W'
 
 #
 # Bindings
 #
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
 bind r source-file ~/.tmux.conf
 bind k clear-history
+bind k clear-history
+bind x kill-pane
+bind X kill-window
 bind v split-window -h -c '#{pane_current_path}'
 bind V split-window -hb -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
@@ -38,13 +41,17 @@ bind S split-window -vb -c '#{page_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind N swap-window -t +1
 bind P swap-window -t -1
-bind k clear-history
-bind x kill-pane
-bind & kill-window
-bind < resize-pane -L 10
-bind - resize-pane -D 10
-bind + resize-pane -U 10
-bind > resize-pane -R 11
+bind 1 select-layout even-horizontal
+bind 2 select-layout even-vertical
+bind 3 select-layout main-horizontal
+bind 4 select-layout main-vertical
+bind 5 select-layout tiled
+bind h resize-pane -L 15
+bind j resize-pane -D 15
+bind k resize-pane -U 15
+bind l resize-pane -R 16
+
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
