--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "env/vim/bundle/ale"]
-	path = env/vim/bundle/ale
-	url = https://github.com/w0rp/ale
 [submodule "env/vim/bundle/auto-pairs"]
 	path = env/vim/bundle/auto-pairs
 	url = https://github.com/jiangmiao/auto-pairs
@@ -67,3 +64,6 @@
 [submodule "env/vim/bundle/vim-vue"]
 	path = env/vim/bundle/vim-vue
 	url = https://github.com/posva/vim-vue
+[submodule "env/vim/bundle/LanguageClient-neovim"]
+	path = env/vim/bundle/LanguageClient-neovim
+	url = https://github.com/autozimu/LanguageClient-neovim
