--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -3,6 +3,7 @@
 #
 # :: Settings
 # :: Bindings
+# :: Navigator
 
 #
 # Settings
@@ -13,6 +14,7 @@ set-option -g prefix C-Space
 bind C-Space send-prefix
 
 set -g mode-keys vi
+set -g default-terminal 'screen-256color'
 set -g default-command zsh
 set -g message-style fg=default,bg=default
 set -g status-justify centre
@@ -31,8 +33,6 @@ set -g window-status-current-format ' #[fg=colour07]#W'
 
 bind r source-file ~/.tmux.conf
 bind k clear-history
-bind k clear-history
-
 bind x kill-pane
 bind X kill-window
 bind v split-window -h -c '#{pane_current_path}'
@@ -42,24 +42,28 @@ bind S split-window -vb -c '#{page_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind N swap-window -t +1
 bind P swap-window -t -1
-
 bind 1 select-layout even-horizontal
 bind 2 select-layout even-vertical
 bind 3 select-layout main-horizontal
 bind 4 select-layout main-vertical
 bind 5 select-layout tiled
-
 bind h resize-pane -L 15
 bind j resize-pane -D 15
 bind k resize-pane -U 15
 bind l resize-pane -R 16
 
+#
+# Navigator
+#
+
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
 bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
 bind -T copy-mode-vi C-h select-pane -L
 bind -T copy-mode-vi C-j select-pane -D
 bind -T copy-mode-vi C-k select-pane -U
