clean up config files

--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -32,7 +32,7 @@ set -g window-status-current-format ' #[fg=colour07]#W'
 #
 
 bind r source-file ~/.tmux.conf
-bind k clear-history
+bind b clear-history
 bind x kill-pane
 bind X kill-window
 bind v split-window -h -c '#{pane_current_path}'
