--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "env/vim/bundle/vim-endwise"]
 	path = env/vim/bundle/vim-endwise
 	url = https://github.com/tpope/vim-endwise
+[submodule "env/vim/bundle/vim-jsx"]
+	path = env/vim/bundle/vim-jsx
+	url = https://github.com/mxw/vim-jsx
