--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,9 @@
 [submodule "env/vim/bundle/vim-jsx"]
 	path = env/vim/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx
+[submodule "env/vim/bundle/html5.vim"]
+	path = env/vim/bundle/html5.vim
+	url = https://github.com/othree/html5.vim
+[submodule "env/vim/bundle/phpcomplete.vim"]
+	path = env/vim/bundle/phpcomplete.vim
+	url = https://github.com/shawncplus/phpcomplete.vim
