--- a/tmux.conf
+++ b/tmux.conf
@@ -51,26 +51,16 @@ bind h resize-pane -L 15
 bind j resize-pane -D 15
 bind k resize-pane -U 15
 bind l resize-pane -R 16
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-# bind -T copy-mode-vi C-h select-pane -L
-# bind -T copy-mode-vi C-j select-pane -D
-# bind -T copy-mode-vi C-k select-pane -U
-# bind -T copy-mode-vi C-l select-pane -R
-# bind -T copy-mode-vi C-\ select-pane -l
 
 #
 # Plugins
 #
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run -b '~/.tmux/plugins/tpm/tpm'
-
-# Nord
-
-# set -g @nord_tmux_no_patched_font "1"
