--- a/tmux.conf
+++ b/tmux.conf
@@ -14,18 +14,14 @@ set-option -g prefix C-Space
 bind C-Space send-prefix
 
 set -g mode-keys vi
-set -g default-terminal 'screen-256color'
 set -g default-command zsh
-set -g message-style fg=default,bg=default
-set -g status-justify centre
-set -g status-position top
-set -g status-bg default
-set -g window-status-bg default
-set -g status-left ''
-set -g status-right ''
-set -g window-status-format ' #[fg=colour12]#W'
-set -g window-status-current-bg default
-set -g window-status-current-format ' #[fg=colour07]#W'
+set -g status-bg colour0
+set -g status-fg colour7
+set -g status-left '#[bg=colour8,fg=colour6] #S '
+set -g status-right '#[fg=colour8]#(spotify-info) #[bg=colour8,fg=colour6] %a %b%Oe %H:%M %p '
+set -g status-right-length 100
+set -g window-status-format '#[bg=colour0,fg=colour7] #W '
+set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 
 #
 # Bindings
@@ -60,6 +56,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
