--- a/tmux.conf
+++ b/tmux.conf
@@ -15,8 +15,9 @@ bind C-Space send-prefix
 
 set -g mode-keys vi
 set -g default-command zsh
-set -g status-bg colour0
-set -g status-fg colour7
+set -g message-command-style bg=colour0,fg=colour7
+set -g message-style bg=colour0,fg=colour7
+set -g status-style bg=colour0,fg=colour7
 set -g status-left '#[bg=colour8,fg=colour6] #S '
 set -g status-right '#[fg=colour8]#(spotify-info) #[bg=colour8,fg=colour6] %a %b%Oe %H:%M %p '
 set -g status-right-length 100
