--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ set -g message-command-style bg=colour0,fg=colour7
 set -g message-style bg=colour0,fg=colour7
 set -g status-style bg=colour0,fg=colour7
 set -g status-left '#[bg=colour8,fg=colour6] #S '
-set -g status-right '#[fg=colour8]#(spotify-info) #[bg=colour8,fg=colour6] %a %b%Oe %H:%M %p '
+set -g status-right '#[bg=colour8,fg=colour6] %a %b%Oe %H:%M %p '
 set -g window-status-format '#[bg=colour0,fg=colour7] #W '
 set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 
