--- a/docks/laravel/docker-compose.yml
+++ b/docks/laravel/docker-compose.yml
@@ -5,12 +5,9 @@ services:
     build:
       context: .
     volumes:
-      - ./trucker-classifieds-laravel:/home/app/src
+      - ./DIRECTORY:/home/app/src
       - ~/.ssh:/home/app/.ssh
     ports:
       - "8000:8000"
-    extra_hosts:
-      - "cms2.db:10.42.50.59"
-      - "recruiting0.db:10.42.37.158"
     command:
       - /home/app/docker-command.sh
