update aliases, maps and binds

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,20 +29,18 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 #
 
 bind r source-file ~/.tmux.conf
-bind b clear-history
 bind x kill-pane
-bind X kill-window
-bind v split-window -h -c '#{pane_current_path}'
-bind V split-window -hb -c '#{pane_current_path}'
-bind s split-window -v -c '#{pane_current_path}'
-bind S split-window -vb -c '#{page_current_path}'
 bind c new-window -c '#{pane_current_path}'
-bind N swap-window -t +1
+bind s split-window -v -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
+bind p previous-window
+bind n next-window
 bind P swap-window -t -1
-bind h resize-pane -L 15
-bind j resize-pane -D 15
-bind k resize-pane -U 15
-bind l resize-pane -R 16
+bind N swap-window -t +1
+bind h resize-pane -L 10
+bind j resize-pane -D 10
+bind k resize-pane -U 10
+bind l resize-pane -R 10
 
 #
 # Plugins
