move vim and zsh functions around

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,8 +30,8 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 #
 
 bind r source-file ~/.tmux.conf
-bind x kill-pane
-bind c new-window -c '#{pane_current_path}'
+bind c kill-pane
+bind t new-window -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
 bind p previous-window
