--- a/tmux.conf
+++ b/tmux.conf
@@ -29,11 +29,24 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 # Bindings
 #
 
+unbind -a
+
+bind d detach
+bind . command-prompt 'rename-session %%'
+bind , command-prompt 'rename-window %%'
+bind { swap-pane -U
+bind } swap-pane -D
+bind [ copy-mode
+bind ] paste-buffer
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+
 bind r source-file ~/.tmux.conf
-bind c kill-pane
-bind t new-window -c '#{pane_current_path}'
-bind s split-window -v -c '#{pane_current_path}'
-bind v split-window -h -c '#{pane_current_path}'
+bind q confirm-before kill-pane
+bind Q confirm-before kill-session
+bind t new-window -ac '#{pane_current_path}'
+bind s split-window -vc '#{pane_current_path}'
+bind v split-window -hc '#{pane_current_path}'
 bind p previous-window
 bind n next-window
 bind P swap-window -t -1
