track terminfo; update tmux default-terminal; configure vimwiki

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,7 @@ set-option -g prefix C-Space
 bind C-Space send-prefix
 
 set -g mode-keys vi
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'tmux-256color'
 set -g message-command-style bg=colour0,fg=colour7
 set -g message-style bg=colour0,fg=colour7
 set -g status-style bg=colour0,fg=colour7
