--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,7 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 unbind -a
 
 bind d detach
+bind r source-file ~/.tmux.conf
 bind . command-prompt 'rename-session %%'
 bind , command-prompt 'rename-window %%'
 bind { swap-pane -U
