update git config and add template dir with hooks for managing ctags

--- a/git/config
+++ b/git/config
@@ -3,6 +3,8 @@
     email = liambutterworth@randallreilly.com
 [credential]
     helper = cache --timeout=3600
+[init]
+    templatedir = ~/.dotfiles/git/template
 [core]
     editor = vim
 [diff]
