--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 unbind -a
 
 bind d detach
-bind r source-file ~/.tmux.conf
+bind : command-prompt
 bind . command-prompt 'rename-session %%'
 bind , command-prompt 'rename-window %%'
 bind { swap-pane -U
@@ -42,7 +42,6 @@ bind ] paste-buffer
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 
-bind r source-file ~/.tmux.conf
 bind t new-window -ac '#{pane_current_path}'
 bind s split-window -vc '#{pane_current_path}'
 bind v split-window -hc '#{pane_current_path}'
