update window config

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,9 @@ set -g status-right-length 50
 set -g window-status-format '#[bg=colour0,fg=colour7] #W '
 set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 
+set -g pane-border-style 'fg=colour0 bg=colour0'
+set -g pane-active-border-style 'fg=colour8 bg=colour8'
+
 #
 # Bindings
 #
