--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,23 +1,44 @@
-alt_send_esc: true
-background_opacity: 0.96
-draw_bold_text_with_bright_colors: true
-live_config_reload: true
-tabspaces: 4
+#
+# Alacritty
+#
+# :: Window
+# :: Scrolling
+# :: Font
+# :: Colors
+# :: Cursor
+# :: Selection
+# :: Mouse
+# :: Bindings
+# :: Debug
+
+#
+# Window
+#
 
 window:
   dimensions:
     columns: 0
     lines: 0
   padding:
-    x: 6
-    y: 6
+    x: 0
+    y: 0
   decorations: buttonless
-  startup_mode: Maximized
+  startup_mode: SimpleFullscreen
+
+background_opacity: 0.96
+
+#
+# Scrolling
+#
 
 scrolling:
   history: 10000
   multiplier: 3
   faux_multiplier: 3
+
+#
+# Font
+#
 
 font:
   normal:
@@ -30,6 +51,12 @@ font:
     x: 0
     y: 15
   use_thin_strokes: true
+
+draw_bold_text_with_bright_colors: true
+
+#
+# Colors
+#
 
 colors:
     primary:
@@ -57,21 +84,34 @@ colors:
       cyan: '0x8FBCBB'
       white: '0xECEFF4'
 
+#
+# Cursor
+#
+
 cursor:
   style: Block
   unfocused_hollow: true
 
+#
+# Selection
+#
+
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
   save_to_clipboard: true
+
+#
+# Mouse
+#
 
 mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
   hide_when_typing: true
 
-mouse_bindings:
-  - { mouse: Middle, action: PasteSelection }
+#
+# Bindings
+#
 
 key_bindings:
   - { key: V, mods: Command, action: Paste }
@@ -80,9 +120,17 @@ key_bindings:
   - { key: N, mods: Command, action: SpawnNewInstance }
   - { key: Return, mods: Command, action: ToggleSimpleFullscreen }
 
+alt_send_esc: true
+
+#
+# Debug
+#
+
 debug:
   render_timer: false
   persistent_logging: false
   log_level: Warn
   print_events: false
   ref_test: false
+
+live_config_reload: true
