--- a/alacritty.yml
+++ b/alacritty.yml
@@ -42,8 +42,16 @@ scrolling:
 
 font:
   normal:
-    family: Source Code Pro Light
+    family: SauceCodePro Nerd Font
+    style: Light
+  bold:
+    family: SauceCodePro Nerd Font
+    style: Regular
+  italic:
+    family: SauceCodePro Nerd Font
+    style: Light Italic
   size: 20
+
   offset:
     x: 1
     y: 30
