clean up and add q and Q bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,11 +22,10 @@ set -g status-left '#[bg=colour8,fg=colour6] #S '
 set -g status-left-length 50
 set -g status-right '#[bg=colour8,fg=colour6] %a %b %Oe%l:%M%p '
 set -g status-right-length 50
-set -g window-status-format '#[bg=colour0,fg=colour7] #W '
-set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
-
 set -g pane-border-style 'fg=colour0 bg=colour0'
 set -g pane-active-border-style 'fg=colour8 bg=colour8'
+set -g window-status-format '#[bg=colour0,fg=colour7] #W '
+set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 
 #
 # Bindings
@@ -45,6 +44,8 @@ bind ] paste-buffer
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 
+bind q kill-pane
+bind Q kill-window
 bind t new-window -ac '#{pane_current_path}'
 bind s split-window -vc '#{pane_current_path}'
 bind v split-window -hc '#{pane_current_path}'
